# pdocker-android

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: RELEASE_TEMPLATE.md  pull_request_template.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  pdocker_direct_exec.c  pdocker_gpu_abi.h  pdocker_gpu_executor.c  pdocker_media_executor.c  pty.c
docker-proot-setup/: .gitignore
docs/: ANDROID_SELFDEBUG.md  API29_DIRECT_EXEC_FEASIBILITY.md  COMPATIBILITY.md  DEFAULT_DEV_WORKSPACE.md  DOCKER_COMPAT_SCOPE.md  GPU_COMPAT.md  OVERLAYFS_ROADMAP.md  README.md  REPLAN_2026-05-01.md  RUNTIME_STRATEGY.md  STATUS.md  THIRD_PARTY_LICENSES.md  TODO.md  compat-audit-latest.md
scripts/: README.md  android-api29-direct-feasibility.sh  android-dev-workspace-compose-smoke.sh  android-device-memory-diagnostics.sh  android-device-smoke.sh  android-direct-path-boundary-probe.sh  android-documents-mediator-smoke.sh  android-file-io-bench.sh  android-file-io-microbench.sh  android-gpu-compare-bench.sh  android-gpu-host-bench.sh  android-llama-bench.sh  android-llama-gpu-compare.sh  android-llama-gpu-readiness.sh  android-llama-tool-bench.sh  android-runtime-bench.sh  android-selfdebug.sh  android-service-truth-capture.sh  android-syscall-usecase-profile.sh  android-test-suite-container-exec.sh  bench-gpu-bridge.sh  build-all.sh  build-apk.sh  build-gpu-shim.sh  build-native-termux.sh  build-proot.sh  compat-audit.py  copy-native.sh  fetch-xterm.sh  setup-env.sh  (+37 more)
(+312 files in other folders)
